# ai-agent-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  .npmrc  README.md  compose.e2e.yaml  compose.provider-smoke.yaml  compose.skill-runtime-e2e.yaml  compose.yaml  findings.md  package-lock.json  package.json  pdf_extract.txt  pnpm-lock.yaml  progress.md  task_plan.md
apps/agent/: .dockerignore  Dockerfile  pyproject.toml
apps/agent/src/agent_service/: __init__.py  app.py  catalog.py  config.py  database.py  default_agent.py  (+27 more)
apps/agent/tests/: test_app.py  test_catalog.py  test_config.py  test_database.py  test_default_agent.py  test_e2e_deterministic_model.py  test_migrate.py  test_migrate_postgres.py  test_model_config_crypto.py  test_model_config_migrate.py  test_model_config_migrate_postgres.py  test_model_config_repository.py  test_model_config_repository_postgres.py  test_model_config_types.py  test_model_control_api.py  test_model_control_auth.py  test_model_control_service.py  test_model_endpoint_catalog.py  test_model_registry.py  test_model_runtime_slot.py  test_model_runtime_types.py  test_model_verifier.py  test_provider_smoke.py  test_runtime_logging.py  test_skill_activation_coordinator.py  test_skill_agent_factory.py  test_skill_artifact_repository.py  test_skill_artifact_repository_postgres.py  test_skill_control_api.py  test_skill_control_auth.py  test_skill_generation_slot.py  test_skill_materializer.py  test_skill_runtime_manager.py  test_skill_runtime_middleware.py
apps/skill-registry/: Dockerfile  pyproject.toml
apps/skill-registry/tests/: test_api.py  test_app.py  test_artifact_store.py  test_auth.py  test_config.py  test_migrate.py  test_migrate_postgres.py  test_repository.py  test_repository_postgres.py  test_schema.py  test_service.py  test_types.py
(+659 files in other folders)
